fix(center - title): Handling too long entity title.

--- a/client/app/center/center.css
+++ b/client/app/center/center.css
@@ -38,7 +38,7 @@
     transitionDISABLED: .15s;
 }
 .panel-title-info {
-    max-width: 89%;
+    max-width: 73%;
 }
 .panel-title-info,
 .panel-title-member {
